@@ -5,6 +5,10 @@ http://www.springframework.org/osgi
 Changes in version 1.0.1 (200y-mm-dd)
 -----------------------------------------
 
+General
+* fixed nested Eclipse classpath entry in spring-osgi bundle archetype
+* added log4j.properties to spring-osgi bundle archetype
+
 Package org.springframework.context.support
 * the namespace resolver mechanism first checks the local bundle classpath before using the extender namespace service
 
